# jespers-uppgift

./: FirstEntrance.xml  README.md  hello.ipynb  hello.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
meshes/: CA-Huset-itu_brick.ply  CA-Huset-itu_metal.ply  Chalmers_K_rhus-itu_brick.ply  Chalmers_K_rhus-itu_metal.ply  Chalmers_K_rhus_Bro-itu_brick.ply  Chalmers_K_rhus_Bro-itu_metal.ply  Chalmers_K_rhus_Glass_part-itu_glass.ply  Chalmers_K_rhus_Glass_part-itu_metal.ply  Plane.ply  element-itu_metal-001.ply  element-itu_metal.ply  element_002-itu_brick.ply  element_002-itu_metal.ply  map_5_osm_buildings-baf2cb.ply  map_5_osm_buildings-itu_brick.ply  map_5_osm_buildings-itu_metal.001.ply  map_5_osm_buildings-itu_metal.ply
src/jespers_uppgift/: hello.py
