[project]
name = "jespers-uppgift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "mitsuba==3.5.2",
    "numpy>=2.0.2",
    "sionna>=0.8.0",
    "tensorflow>=2.18.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
