[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "jespers-uppgift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "mitsuba==3.5.2",
    "sionna==0.19.1",
    "tensorflow==2.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.0.5",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "pip>=25.0.1",
    "ruff>=0.9.6",
]


[tool.ruff.lint]
unfixable = ["F401", "F841"]
select = ["ALL"]
ignore = ["DOC", "D", "T201", "CPY", "ERA", "PLR2004"]
preview = true


[tool.mypy]
strict = true


[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
